<package>
	<name>tobi_world_msgs</name>
	<version>0.1.0</version>
	<description>

		messages for TWM

	</description>
	<maintainer email="lruegeme@techfak.uni-bielefeld.de">Leroy Ruegemer</maintainer>
	<author email="lruegeme@techfak.uni-bielefeld.de">Leroy Ruegemer</author>
	<license>BSD</license>

	<buildtool_depend>catkin</buildtool_depend>
	<build_depend>message_generation</build_depend>
	<build_depend>genmsg</build_depend>
	<build_depend>cmake_modules</build_depend>
	
	<build_depend>geometry_msgs</build_depend>
	<build_depend>shape_msgs</build_depend>
	<build_depend>uuid_msgs</build_depend>
	<build_depend>nav_msgs</build_depend>
	<build_depend>visualization_msgs</build_depend>

	<run_depend>geometry_msgs</run_depend>
	<run_depend>shape_msgs</run_depend>
	<run_depend>uuid_msgs</run_depend>
	<run_depend>nav_msgs</run_depend>
	<run_depend>visualization_msgs</run_depend>
	
	<run_depend>message_runtime</run_depend>
</package>
